[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/GameLogo.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/backgroud_loading.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/font40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/sprites/green.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/green_press.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/red.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/red_press.png" type="Texture" id=8]

[node name="settings" type="Node"]

script/script = ExtResource( 1 )

[node name="logo" type="Sprite" parent="."]

transform/pos = Vector2( 365.195, 174.664 )
texture = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 360, 640 )
z/z = -1
texture = ExtResource( 3 )

[node name="infos" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 407.0
margin/right = 656.0
margin/bottom = 1011.0

[node name="lblDificuldade" type="Label" parent="infos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 46.0
margin/right = 588.0
margin/bottom = 123.0
custom_fonts/font = ExtResource( 4 )
text = "Dificuldade"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnChangeNivel" type="TextureButton" parent="infos"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 243.0
margin/right = 549.0
margin/bottom = 407.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="lblNivel" type="Label" parent="infos/btnChangeNivel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 47.0
margin/right = 473.0
margin/bottom = 125.0
custom_fonts/font = ExtResource( 4 )
text = "Normal"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnVoltar" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 1037.0
margin/right = 653.0
margin/bottom = 1243.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="lblVelocidade" type="Label" parent="btnVoltar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -2.0
margin/top = 68.0
margin/right = 583.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 4 )
text = "Voltar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="infos/btnChangeNivel" to="." method="_on_btnChangeNivel_pressed"]

[connection signal="modal_close" from="btnVoltar" to="." method="_on_TextureButton1_modal_close"]

[connection signal="pressed" from="btnVoltar" to="." method="_on_btnVoltar_pressed"]


